# GexFetcher

./: INSTALL.md  README.md
.github/workflows/: ci.yml  compute.yml  keepalive.yml
docs/csharp-parse-test/FFGEXParseTest/: FFGEXParseTest.csproj  Program.cs  spy_payload.json  spy_payload_v2.json
fetcher/: pyproject.toml
fetcher/ffgex_fetcher/: __init__.py  __main__.py  chain_fetcher.py  futures_mapper.py  gex_engine.py  greeks.py  output.py
fetcher/ffgex_fetcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fetcher/tests/: test_0dte.py  test_cross_stack.py  test_futures_mapper.py  test_gex_engine.py  test_greeks.py  test_live_integration.py  test_occ_index_parsing.py  test_orchestrator.py  test_output.py  test_spx_pipeline.py  test_stage4_audit.py  test_synthetic_pipeline.py
fetcher/tests/fixtures/: build_synthetic.py  spy_chain_synthetic.json
indicator/: FFGEXLevels.cs
worker/: package.json  wrangler.toml
worker/src/: index.js
worker/test/: worker.test.js
