[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ffgex-fetcher"
version = "1.0.0"
description = "FF GEX Levels — Python fetcher service"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<0.28",
    "numpy>=1.26,<2.0",
    "scipy>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools.packages.find]
include = ["ffgex_fetcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
